Add nav bar in html file

--- a/yt-2024.html
+++ b/yt-2024.html
@@ -42,4 +42,26 @@
       </a>
     </div>
   </header>
+  <nav class="left-nav">
+    <a class="nav-bar-divs">
+      <img class="nav-bar-icons" src="icons/home.png" alt="">
+      <P>Home</P>
+    </a>
+    <a class="nav-bar-divs">
+      <img class="nav-bar-icons" src="icons/explore.png" alt="">
+      <P>Shorts</P>
+    </a>
+    <a class="nav-bar-divs">
+      <img class="nav-bar-icons" src="icons/Subscription.png" alt="">
+      <P>Subscription</P>
+    </a >
+    <a class="nav-bar-divs">
+      <img class="nav-bar-icons" src="icons/you.png" alt="">
+      <P>You</P>
+    </a>
+    <a class="nav-bar-divs">
+      <img class="nav-bar-icons" src="icons/history.png" alt="">
+      <P>History</P>
+    </a>
+  </nav>
 </body>
