Add Main section with 9 videos

--- a/yt-2024.html
+++ b/yt-2024.html
@@ -64,4 +64,162 @@
       <P>History</P>
     </a>
   </nav>
+  <main class="main">
+    <!-- this is video div 1st-->
+     <div class="video-grid">
+      <div class="video-1">
+        <div class="thumbnail">
+          <img src="youtube-c/images-tum1.jpeg" class="img-thumbnail" alt="">
+        </div>
+        <div class="channel-video-info">
+          <img src="youtube-prof-pic/Awais.jpg" class="channel-pic" alt="">
+          <div class="video-info">
+            <p class="video-heading">heading</p>
+            <p class="channel-name">channel name</p>
+            <p class="video-stats">video stats</p>
+          </div>
+          <div class="three-dit-div">
+            <img class="tdots" src="icons/dots.png" alt="">
+          </div>
+        </div>
+      </div>
+      <!--this is video div 2nd -->
+      <div class="video-1">
+        <div class="thumbnail">
+          <img src="youtube-c/images-tum2.jpeg" class="img-thumbnail" alt="">
+        </div>
+        <div class="channel-video-info">
+          <img src="youtube-prof-pic/Awais.jpg" class="channel-pic" alt="">
+          <div class="video-info">
+            <p class="video-heading">heading</p>
+            <p class="channel-name">channel name</p>
+            <p class="video-stats">video stats</p>
+          </div>
+          <div class="three-dit-div">
+            <img class="tdots" src="icons/dots.png" alt="">
+          </div>
+        </div>
+      </div>
+      <!-- this is video div 3rd -->
+      <div class="video-1">
+        <div class="thumbnail">
+          <img src="youtube-c/images-tum10.jpeg" class="img-thumbnail" alt="">
+        </div>
+        <div class="channel-video-info">
+          <img src="youtube-prof-pic/Awais.jpg" class="channel-pic" alt="">
+          <div class="video-info">
+            <p class="video-heading">Farzi Artist and His Biggest CASH ft. Sahid Kapoor and Vijay Subpathy</p>
+            <p class="channel-name">channel name</p>
+            <p class="video-stats">video stats</p>
+          </div>
+          <div class="three-dit-div">
+            <img class="tdots" src="icons/dots.png" alt="">
+          </div>
+        </div>
+      </div>
+      <!-- this is video div 4rd -->
+      <div class="video-1">
+        <div class="thumbnail">
+          <img src="youtube-c/images-tum4.jpeg" class="img-thumbnail" alt="">
+        </div>
+        <div class="channel-video-info">
+          <img src="youtube-prof-pic/Awais.jpg" class="channel-pic" alt="">
+          <div class="video-info">
+            <p class="video-heading">Farzi Artist and His Biggest CASH ft. Sahid Kapoor and Vijay Subpathy</p>
+            <p class="channel-name">channel name</p>
+            <p class="video-stats">video stats</p>
+          </div>
+          <div class="three-dit-div">
+            <img class="tdots" src="icons/dots.png" alt="">
+          </div>
+        </div>
+      </div>
+      <!-- this is video div 5rd -->
+      <div class="video-1">
+        <div class="thumbnail">
+          <img src="youtube-c/images-tum5.jpeg" class="img-thumbnail" alt="">
+        </div>
+        <div class="channel-video-info">
+          <img src="youtube-prof-pic/Awais.jpg" class="channel-pic" alt="">
+          <div class="video-info">
+            <p class="video-heading">Farzi Artist and His Biggest CASH ft. Sahid Kapoor and Vijay Subpathy</p>
+            <p class="channel-name">channel name</p>
+            <p class="video-stats">video stats</p>
+          </div>
+          <div class="three-dit-div">
+            <img class="tdots" src="icons/dots.png" alt="">
+          </div>
+        </div>
+      </div>
+      <!-- this is video div 6rd -->
+      <div class="video-1">
+        <div class="thumbnail">
+          <img src="youtube-c/images-tum6.jpeg" class="img-thumbnail" alt="">
+        </div>
+        <div class="channel-video-info">
+          <img src="youtube-prof-pic/Awais.jpg" class="channel-pic" alt="">
+          <div class="video-info">
+            <p class="video-heading">Farzi Artist and His Biggest CASH ft. Sahid Kapoor and Vijay Subpathy</p>
+            <p class="channel-name">channel name</p>
+            <p class="video-stats">video stats</p>
+          </div>
+          <div class="three-dit-div">
+            <img class="tdots" src="icons/dots.png" alt="">
+          </div>
+        </div>
+      </div>
+      <!-- this is video div 7rd -->
+      <div class="video-1">
+        <div class="thumbnail">
+          <img src="youtube-c/images-tum7.jpeg" class="img-thumbnail" alt="">
+        </div>
+        <div class="channel-video-info">
+          <img src="youtube-prof-pic/Awais.jpg" class="channel-pic" alt="">
+          <div class="video-info">
+            <p class="video-heading">Farzi Artist and His Biggest CASH ft. Sahid Kapoor and Vijay Subpathy</p>
+            <p class="channel-name">channel name</p>
+            <p class="video-stats">video stats</p>
+          </div>
+          <div class="three-dit-div">
+            <img class="tdots" src="icons/dots.png" alt="">
+          </div>
+        </div>
+      </div>
+      <!-- this is video div 8rd -->
+      <div class="video-1">
+        <div class="thumbnail">
+          <img src="youtube-c/images-tum8.jpeg" class="img-thumbnail" alt="">
+        </div>
+        <div class="channel-video-info">
+          <img src="youtube-prof-pic/Awais.jpg" class="channel-pic" alt="">
+          <div class="video-info">
+            <p class="video-heading">Farzi Artist and His Biggest CASH ft. Sahid Kapoor and Vijay Subpathy</p>
+            <p class="channel-name">channel name</p>
+            <p class="video-stats">video stats</p>
+          </div>
+          <div class="three-dit-div">
+            <img class="tdots" src="icons/dots.png" alt="">
+          </div>
+        </div>
+      </div>
+      <!-- this is video div 9rd -->
+      <div class="video-1">
+        <div class="thumbnail">
+          <img src="youtube-c/images-tum9.png" class="img-thumbnail" alt="">
+        </div>
+        <div class="channel-video-info">
+          <img src="youtube-prof-pic/Awais.jpg" class="channel-pic" alt="">
+          <div class="video-info">
+            <p class="video-heading">Farzi Artist and His Biggest CASH ft. Sahid Kapoor and Vijay Subpathy</p>
+            <p class="channel-name">channel name</p>
+            <p class="video-stats">video stats</p>
+          </div>
+          <div class="three-dit-div">
+            <img class="tdots" src="icons/dots.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
+</html>
